--- a/index.html
+++ b/index.html
@@ -44,8 +44,34 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <div>
+                    <input type="text" name="username" required="required" minlength="3" maxlength="20" ng-model="ctrl.username" />
 
+                    <div ng-if="form.username.$touched">
+                        <div ng-if="form.username.$error.required">username required</div>
+                        <div ng-if="form.username.$error.minlength">must be longer than 3 characters</div>
+                        <div ng-if="form.username.$error.maxlength">maximum length of 20 required</div>
+                    </div>
+                </div>
+
+                <div>
+                    <input type="password" name="password" required="required" minlength="8" ng-model="ctrl.password" />
+
+                    <div ng-if="form.username.$touched">
+                        <div ng-if="form.password.$error.required">password required</div>
+                        <div ng-if="form.password.$error.minlength">must be longer than 8 characters</div>
+                    </div>
+                </div>
+
+                <div>
+                    <input type="email" name="email" required="required" ng-model="ctrl.email" />
+
+                    <div ng-if="form.username.$touched">
+                        <div ng-if="form.email.$error.required">email required</div>
+                        <div ng-if="form.email.$error.email">email is invalid</div>
+                    </div>
+                </div>
             </form>
         </div>
     </div>
