--- a/index.html
+++ b/index.html
@@ -44,7 +44,24 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <input type="text" name="username" required minlength="3" maxlength="20" ng-model="ctrl.username" />
+                <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$error.required">Username is required</div>
+                    <div ng-if="form.username.$error.minlength">Username must be at least 3 characters</div>
+                    <div ng-if="form.username.$error.maxlength">Username is no more than 20 characters</div>
+                </div>
+
+                <input type="password" name="password" required minlength="8" ng-model="ctrl.password" />
+                <div ng-if="form.password.$touched">
+                    <div ng-if="form.password.$error.required">Password is required</div>
+                    <div ng-if="form.password.$error.minlength">Password must be at least 8 characters</div>
+                </div>
+                <input type="email" name="email" required ng-model="ctrl.email" />
+                <div ng-if="form.email.$touched">
+                    <div ng-if="form.email.$error.required">Email is required</div>
+                    <div ng-if="form.email.$error.email">Email must be a valid email</div>
+                </div>
 
             </form>
         </div>
